--- a/index.html
+++ b/index.html
@@ -7,70 +7,115 @@
     <title>Document</title>
 </head>
 <body>
-    
     <header>
         <div class="container">
-            <nav class="navbar">
-                <img src="./images/Group 21.svg" alt="logo">
-                <ul class="nav_list">
-                    <li>
-                        <a href="#" class="nav_link">Pricing</a>
-                    </li>
-                    <li>
-                        <a href="#" class="nav_link">About</a>
-                    </li>
-                    <li>
-                        <a href="#" class="nav_link">Contact</a>
-                    </li>
-                        <button class="nav_btn">Schedule a Demo</button> 
-                    </li>
-                </ul>
-                <button class="menu">
-                </button>
+            <nav class="nav">
+                <h2 class="nav__logo">Potfolio</h2>
+               <ul class="nav__list">
+                <li><a style="color: aqua;" href="#home" class="nav__link">Home</a></li>
+                <li><a href="#about" class="nav__link">About</a></li>
+                <li><a href="#service" class="nav__link">Service</a></li>
+                <li><a href="#portfolio" class="nav__link">Portfolio</a></li>
+                <li><a href="#contact" class="nav__link">Contact</a></li>
+                <img src="./images/menu.png" alt="" class="menu">
+               </ul>
             </nav>
         </div>
     </header>
     <main>
         <div class="container">
-            <div class="wrapper">
-                <h2 class="start">Start building with our APIs for absolutely free.</h2>
-                <img src="./images/Group 30 (1).svg" alt="" class="phone">
+        <div class="main">
+            <div class="men">
+                <h3 class="hello">Hello It's Me</h3>
+                <h2 class="Baxrom">Baxrom Saidjonov</h2>
+                <h3 class="front">And I'm a <span>Frontend Developer</span></h3>
+                <p class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae nulla libero labore  exercitationem, iste iusto unde eos.</p>
+                <div class="logos">
+                    <img src="./images/face.png" alt="">
+                    <img src="./images/qush.png" alt="">
+                    <img src="./images/insta.png" alt="">
+                    <img src="./images/in.png" alt="">
+                </div>
+                <button class="download">Download CV</button>
             </div>
-
-            <div class="wrapper_2">
-            <img src="./images/Group 14 (2).png" alt="">
-                <h2 class="starter">Easy to implement</h2> 
-               <p class="text">Our API comes with just a few lines of code. You’ll be up and running in no time. We built our documentation page to integrate payments functionality with ease. </p>
-            </div>
+            <img src="./images/boy.png" alt="" class="odam">
+        </div>
         </div>
     </main>
     <section>
         <div class="container">
-           <div class="main">
-            <img src="./images/Group 17.svg" alt="" class="main__logo">
-            <h3 class="h3">Personal Finances</h3>
-            <img src="./images/Group 18.svg" alt="" class="main__logo">
-            <h3 class="h3">Banking & Coverage</h3>
-            <img src="./images/Group 19.svg" alt="" class="main__logo">
-            <h3 class="h3">Consumer Payments</h3>
-           </div>
+         <h2 class="service">Our <span>Service</span></h2>
+
+         <ul class="service__list">
+            <li class="service-item">
+                <img src="./images/yonga.png" alt="" class="service__icon">
+                <h3 class="service__name">Web tevelopment</h3>
+                <p class="service__deck">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus repellendus voluptatem beatae nostrum repudiandae impedit voluptas perspiciatis officia porro ducimus?</p>
+                <button class="wrapper__btn">Read More</button>
+            </li>
+            <li class="service-item">
+                <img src="./images/chotka.png" alt="" class="service__icon">
+                <h3 class="service__name">Graphic Design</h3>
+                <p class="service__deck">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus repellendus voluptatem beatae nostrum repudiandae impedit voluptas perspiciatis officia porro ducimus?</p>
+                <button class="wrapper__btn">Read More</button>
+            </li>
+            <li class="service-item  service__item__large">
+                <img src="./images/daraja.png" alt="" class="service__icon">
+                <h3 class="service__name">Web tevelopment</h3>
+                <p class="service__deck">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus repellendus voluptatem beatae nostrum repudiandae impedit voluptas perspiciatis officia porro ducimus?</p>
+                <button class="wrapper__btn">Read More</button>
+            </li>
+
+         </ul>
+        </div>
+    </section>
+
+    <section class="project">
+        <div class="container">
+            <h2 class="service">Latest <span>Project</span></h2>
+
+            <ul class="project__list">
+                <li class="project___item">
+                    <img src="./images/kompyuter.png" alt="" class="project__img">
+                </li>
+                <li class="project___item">
+                    <img src="./images/kompyuter.png" alt="" class="project__img">
+                </li>
+                <li class="project___item">
+                    <img src="./images/kompyuter.png" alt="" class="project__img">
+                </li>
+                <li class="project___item">
+                    <img src="./images/kompyuter.png" alt="" class="project__img">
+                </li>
+                <li class="project___item">
+                    <img src="./images/kompyuter.png" alt="" class="project__img">
+                </li>
+                <li class="project___item">
+                    <img src="./images/kompyuter.png" alt="" class="project__img">
+                </li>
+            </ul>
+        </div>
+    </section>
+    <section class="formm">
+        <div class="container">
+            <h2 class="service  me">Contact <span>Me!</span></h2>
+            <form action="" class="form">
+                <input type="text" placeholder="Full Name" class="name">
+                <input type="text" placeholder="Email Address" class="name">
+                <input type="text" placeholder="Mobile Number" class="name">
+                <input type="text" placeholder="Email Subject" class="name">
+                <input type="text" class="name large__input" placeholder="">
+                <button class="wrapper__btn">Send Message</button>
         </div>
     </section>
     <footer>
         <div class="container">
-            <div class="footer">
-                <img src="./images/Group 21.png" alt="" class="footer__logo">
-                <ul class="nav__listt">
-                    <li><a href="" class="nav__link">Pricing</a></li>
-                    <li><a href="" class="nav__link">About</a></li>
-                    <li><a href="" class="nav__link">Contact</a></li>
-                </ul>
-               <div class="logos">
-                <img src="./images/Shape (1).svg" alt="">
-                <img src="./images/Path (3).svg" alt="">
-                <img src="./images/Path (2).svg" alt="">
-               </div>
-            </div>
+           <div class="footer">
+            <h3 class="footer__by">Copyright © 2023 by Codehal | All Rights Reserved.</h3>
+           <li>
+            <a href="" id="header"> <img src="./images/tepaga.png" alt="" class="footer__img"></a>
+           </li>
+           </div>
         </div>
     </footer>
 </body>
